--- a/BirthList/BirthList/Client/wwwroot/index.html
+++ b/BirthList/BirthList/Client/wwwroot/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>BirthList</title>
+    <title>Lista de Nacimiento Bebé1</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
     <link href="BirthList.Client.styles.css" rel="stylesheet" />
 </head>
 
