--- a/BirthList/BirthList/Client/wwwroot/index.html
+++ b/BirthList/BirthList/Client/wwwroot/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Lista de Nacimiento Bebé1</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap/bootstrap.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
     <link href="BirthList.Client.styles.css" rel="stylesheet" />
